<resources>
    <string name="app_name">Recipe App</string>
    <string name="register">Register</string>
    <string name="details">Details</string>
    <string name="new_recipe">New recipe</string>
    <string name="edit_recipe">Edit recipe</string>
    <string name="register_already_have_an_account">Already have an account? Login here.</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="no_account_register_here">No account? Register here.</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_main_bar">Recipe App</string>
    <string name="favorites">Favorites</string>
    <string name="recipes">Recipes</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="save">Save</string>
    <string name="public_recipe">Public</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="recipe_duration">Duration</string>
    <string name="not_implemented_ingredients_steps" translatable="false">Creating steps and ingredients is not implemented. Dummy ingredients and steps will be generated.</string>
    <string name="change_language_to_english">Change language to english.</string>
    <string name="change_language_to_dutch">Change language to dutch.</string>
    <string name="number_minutes">%1$s minutes</string>

    <string name="auth_failed">Authentication failed</string>
    <string name="recipe_saved">Recipe Saved</string>
    <string name="recipe_save_failed_form">Recipe not saved because form is incorrect.</string>
    <string name="recipe_shared">"Recipe shared</string>
    <string name="stop_recipe_share">Recipe is not longer shared</string>
    <string name="recipe_deleted">Recipe deleted.</string>
</resources>