<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:background="?attr/colorSurface"
    tools:ignore="MergeRootFrame"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="278dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="?attr/colorSurface"
        android:animateLayoutChanges="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorSurface"
            app:statusBarScrim="?attr/colorSurface"
            app:collapsedTitleGravity="center"
            app:collapsedTitleTextAppearance="@style/TextAppearance.MaterialComponents.Headline1"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="Recipe"
            app:titleEnabled="false"
            app:toolbarId="@id/toolbar">

            <ImageView
                android:id="@+id/editImageView"
                android:layout_width="match_parent"
                android:layout_height="278dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:srcCompat="@drawable/default_image" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:titleTextColor="?attr/colorOnSurface"
                app:layout_collapseMode="pin"
                app:contentInsetStartWithNavigation="0dp"
                app:menu="@menu/bottom_nav_menu"
                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/recipeScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="72dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <EditText
                android:id="@+id/editTitleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:focusable="true"
                android:textAppearance="?attr/textAppearanceHeadline5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Recipe Name"
                android:hint="@string/recipe_title"
                android:inputType="text" />

            <EditText
                android:id="@+id/editRecipeDurationText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="?attr/colorAccent"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTitleTextView"
                tools:text="Duration"
                android:hint="@string/recipe_duration"
                android:inputType="number"
                />

            <RatingBar
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:numStars="5"
                android:rating="5"

                android:stepSize="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editRecipeDurationText" />

            <TextView
                android:id="@+id/recipeIngredientsView"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="342dp"
                android:layout_height="508dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:minHeight="555dp"
                android:text="@string/not_implemented_ingredients_steps"
                android:textIsSelectable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.333"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating"
                tools:text="Details about the recipe" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/choosePhotoFab"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:tint="@android:color/white"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_baseline_attach_file_24"
        tools:ignore="VectorDrawableCompat" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/takePhotoFab"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="80dp"
        android:tint="@android:color/white"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_baseline_photo_camera_24"
        tools:ignore="VectorDrawableCompat"
        tools:layout_editor_absoluteX="303dp"
        tools:layout_editor_absoluteY="26dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveFab"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:tint="@android:color/white"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|start"
        app:srcCompat="@drawable/ic_baseline_save_24"
        tools:ignore="VectorDrawableCompat"
        tools:layout_editor_absoluteX="303dp"
        tools:layout_editor_absoluteY="26dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>